--- a/mysite/search_engine/templates/search_engine/_package_carousel_2.html
+++ b/mysite/search_engine/templates/search_engine/_package_carousel_2.html
@@ -8,7 +8,7 @@
 	{% for iter, package in package_data.items %}
 
 	<!-- <div class="col-sm-2 package-card"> -->
-	<div class="package-card" id="{{iter}}">
+	<div class="package-card package-unselected" id="{{iter}}">
 		<div>
 			<img src="{% static 'search_engine/default_blank.png' %}" alt="Card image cap">
 		</div>
