--- a/mysite/search_engine/templates/search_engine/_standard_results.html
+++ b/mysite/search_engine/templates/search_engine/_standard_results.html
@@ -1,5 +1,7 @@
 {% block styles %}
 {% load staticfiles %}
+{% load info_pane_extras %}
+
 <link rel='stylesheet' href="{% static 'search_engine/_standard_results.css'%}" type='text/css' />
 {% endblock %}
 
@@ -9,7 +11,7 @@
 	<div class="result">
 		<div class="result-title "> <a class="result-title" href="{{r.link}}"}> {{r.title_str}} </a></div>
 		<div class="result-url ">  {{r.link}}  </div>
-		<div class="result-description"> {{r.desc}} </div>
+		<div class="result-description"> {{r.body_markdown|show_markdown|safe}} </div>
 	</div>
 	{% endif %}
 
