--- a/mysite/search_engine/templates/search_engine/results.html
+++ b/mysite/search_engine/templates/search_engine/results.html
@@ -34,6 +34,8 @@
 		</form>
 	</div>
 </div>
+
+{% if package_data %}
 <div class="container-fluid carousel-container">
 	<div class="row padding-top-medium filter-bar">
 		<!-- {{filter_data}} -->
@@ -47,6 +49,7 @@
 		</div>
 	</div>
 </div>
+{% endif %}
 
 
 <div class="container-fluid main-body" >
