--- a/mysite/search_engine/static/search_engine/_package_carousel.css
+++ b/mysite/search_engine/static/search_engine/_package_carousel.css
@@ -1,13 +1,18 @@
+.package-carousel {
+	min-height: 260px;
+}
+
 .package-card {
 	/*background: black;*/
 	border-style: solid;
 	border-width: 5px;
-
+	background: #FFFFFF;
+    box-shadow: 5px 0px 10px #bbbbbb;
 /*	min-height: 100px;
 	min-width: 100px;*/
-	max-height: 200px;
-	max-width: 200px;
-
+	height: 250px;
+	width: 200px;
+	/*min-height: 250px;*/
 
 	margin-left: 5px;
 	margin-right: 5px;
@@ -15,11 +20,13 @@
 	padding: 0px;
 }
 .package-unselected {
-	border-color: #444444;
+	border-color: #dddddd;
 }
 .package-card img {
 	max-height: 170px;
 	max-width: 170px;
+	min-height: 170px;
+	min-width: 170px;
 /*	margin-right: auto;
 	margin-left: auto;
 	margin-bottom: auto;
@@ -40,7 +47,7 @@
 	border-width: 5px;
 	/*border-color: #003262;*/
 }
-.package-text {
+/*.package-text {
 	position: absolute;
 	letter-spacing: 1px;
 	font-weight: 500;
@@ -52,6 +59,19 @@
 	top: 50%;
 	left: 50%;
     transform: translate(-50%, -50%);
+
+}*/
+.package-text {
+	/*background: #999999;*/
+	width: 190px;
+	height: 80px;
+	letter-spacing: 1px;
+	font-weight: 50;
+	font-size: 1.4em;
+	color: #000000;
+	overflow: hidden;
+	word-wrap: break-word;
+	text-align: center;
 
 }
 
