retains same results with query filters

--- a/mysite/search_engine/templates/search_engine/_filter_bar.html
+++ b/mysite/search_engine/templates/search_engine/_filter_bar.html
@@ -29,4 +29,20 @@
   </div>
 </div>
 {% endfor %}
+<!-- 
 
+{% for fil_name, fil_vals in filter_data.items %}
+	{% for op in fil_vals %}
+
+		{% if op.2 %}
+		<button type="button" class="btn btn-secondary btn-lg">
+			<button type="button" class="close btn btn-secondary" aria-label="Close">
+			  <span aria-hidden="true">&times;</span>
+			</button>
+		</button>
+
+		{% endif %}
+
+	{% endfor %}
+{% endfor %}
+ -->
