replace div (although still verticle)

--- a/mysite/search_engine/templates/search_engine/results.html
+++ b/mysite/search_engine/templates/search_engine/results.html
@@ -44,7 +44,7 @@
 
 	</div>
 	<div class="row">
-		<div class="col-sm-12 padding-medium ">
+		<div class="col-sm-12 padding-medium carosel-div">
 			{% include "search_engine/_package_carousel_2.html" %}
 		</div>
 	</div>
@@ -62,7 +62,9 @@
 <div class="container-fluid main-body table-main-body" >
 	{% include "search_engine/_package_table.html" %}
 </div>
+<div class="foobar">
 
+</div>
 <div class="container-fluid main-body default-main-body" >
 	<div class="row">
 		<div class="col-sm-8">			
