fix load slick problem

--- a/mysite/search_engine/templates/search_engine/_package_carousel_2.html
+++ b/mysite/search_engine/templates/search_engine/_package_carousel_2.html
@@ -2,6 +2,15 @@
 {% load staticfiles %}
 {% load info_pane_extras %}
 <link rel='stylesheet' href="{% static 'search_engine/_package_carousel.css'%}" type='text/css' />
+	<script type="text/javascript" src="{% static 'jquery-3.3.1/jquery-3.3.1.min.js' %}"></script>
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    	<script type="text/javascript" src="{% static 'popper-1.14.3/popper.min.js' %}"></script>
+ 	<link rel="stylesheet" href="{% static 'bootstrap-4.0.0-dist/css/bootstrap.min.css' %}">
+	<script type="text/javascript" src="{% static 'bootstrap-4.0.0-dist/js/bootstrap.min.js' %}"></script>
+
+<link rel="stylesheet" type="text/css" href="{% static 'slick-1.8.0/slick/slick.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'slick-1.8.0/slick/slick-theme.css' %}"/>
+<script type="text/javascript" src="{% static 'slick-1.8.0/slick/slick.min.js' %}"></script>
 {% endblock %}
 
 
