--- a/mysite/search_engine/templates/search_engine/results.html
+++ b/mysite/search_engine/templates/search_engine/results.html
@@ -5,6 +5,10 @@
 <link rel='stylesheet' href="{% static 'search_engine/results.css'%}" type='text/css' />
 <script src="{% static 'search_engine/results.js' %}"></script>
 
+<link rel="stylesheet" type="text/css" href="{% static 'slick-1.8.0/slick/slick.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'slick-1.8.0/slick/slick-theme.css' %}"/>
+<script type="text/javascript" src="{% static 'slick-1.8.0/slick/slick.min.js' %}"></script>
+
 {% endblock %}
 
 {% block content %}
